<?xml version="1.0"?>
<package format="2">
  <name>dynamic_obstacle_state_calculator</name>
  <version>0.0.0</version>
  <description>The dynamic_obstacle_state_calculator package</description>
  <maintainer email="amsl@todo.todo">Iwamura Yuuka</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>pedsim_msgs</depend>
  <depend>pedestrian_msgs</depend>
</package>
